Added sections in HTML and modified CSS for mobile sizes style.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 <link href="https://fonts.googleapis.com/css2?family=Galada&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header class="full-width">
+    <div class="container">
+    <header>
         <h1><span>ROGUE</span> PICKINGS</h1>
         <nav>
             <ul>
@@ -24,15 +25,15 @@
                 <li><a href="#">Content</a></li>
             </ul>
         </nav>
-        <div class="banner full-width"></div>
+        <div class="banner"></div>
     </header>
     <main>
-        <section class="welcome full-width">
+        <section class="welcome">
             <h2>Welcome to our little corner of the internet!</h2>
             <p>Welcome to Rogue Pickings, the roaming truck bringing you the freshest ingredients and ideas in food. Our team works hard so you can be sure our ingredients are always fresh and picked carefully. Our menu changes every day and is made with you in mind. We can't wait to come to you! Check out our locations to see where you can find us. </p>
         </section>
-        <section class="offers full-width">
-            <div class="specials third-width">
+        <section class="offers">
+            <div class="specials">
                 <h3>Today's specials</h3>
                 <ul>
                     <li><a href="#">Flaming Hummus & Falafel Salad</a></li>
@@ -40,11 +41,11 @@
                     <li><a href="#">Green Gloves Tamales</a></li>
                 </ul>
             </div>
-            <div class="reviews third-width">
+            <div class="reviews">
                 <h3>Our awesome reviews</h3>
                 <p>"I got so excited about the yumminess of the falafel salad that I am typing this review as I inhale my lunch. Yes it is that good.... Service was super friendly and quick. Can't wait see you Rogue Pickings again tomorrow!"</p>
             </div>
-            <div class="contact third-width">
+            <div class="contact">
                 <h3>Contact us</h3>
                 <p>1001 Potrero Avenue<br>
                 San Francisco, CA 94110<br>
@@ -52,9 +53,10 @@
             </div>
         </section>
     </main>
-    <footer class="full-width">
+    <footer>
         <h3>Powered by lots of <span>fresh</span> ingredients</h3>
     </footer>
+</div>
     
 </body>
 </html>
