Added media queries for tablets and desktops.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <p>Welcome to Rogue Pickings, the roaming truck bringing you the freshest ingredients and ideas in food. Our team works hard so you can be sure our ingredients are always fresh and picked carefully. Our menu changes every day and is made with you in mind. We can't wait to come to you! Check out our locations to see where you can find us. </p>
         </section>
         <section class="offers">
-            <div class="specials">
+            <div class="specials third-width">
                 <h3>Today's specials</h3>
                 <ul>
                     <li><a href="#">Flaming Hummus & Falafel Salad</a></li>
@@ -41,11 +41,11 @@
                     <li><a href="#">Green Gloves Tamales</a></li>
                 </ul>
             </div>
-            <div class="reviews">
+            <div class="reviews third-width">
                 <h3>Our awesome reviews</h3>
                 <p>"I got so excited about the yumminess of the falafel salad that I am typing this review as I inhale my lunch. Yes it is that good.... Service was super friendly and quick. Can't wait see you Rogue Pickings again tomorrow!"</p>
             </div>
-            <div class="contact">
+            <div class="contact third-width">
                 <h3>Contact us</h3>
                 <p>1001 Potrero Avenue<br>
                 San Francisco, CA 94110<br>
